# wikibase-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml  deploy-mcp-service.yml  knowledge-graph.yml  reporting.yml  wiki-serve.yml
apps/cli/: package.json
apps/cli/migrations/: 0001_rainy_iceman.sql  0002_stiff_nebula.sql  0003_quiet_magma.sql  0004_friendly_quentin_quire.sql  0005_nappy_white_queen.sql
apps/cli/src/: index.ts  mcp.ts
apps/mcp/: package.json
apps/mcp/src/: index.ts
apps/server/: Dockerfile  package.json
apps/server/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
archive/docs/: deploy-cloud-run.md
archive/roadmap/: README.md
archive/roadmap/plans/: 01-monorepo-scaffolding.md  02-shared-package.md  03-reporting-scaffolding.md  04-reporting-tools.md  05-reporting-server.md  06-knowledge-scaffolding.md  07-knowledge-tools.md  08-knowledge-sessions.md  09-knowledge-learning.md  10-knowledge-server.md  11-deployment.md  12-seeding.md
archive/scripts/: seed_knowledge.py
scripts/tests/: test_seed.py
services/knowledge-graph/: Dockerfile  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
services/knowledge-graph/alembic/: env.py
services/knowledge-graph/alembic/versions/: 001_initial.py
services/knowledge-graph/drizzle/: 0000_freezing_northstar.sql
services/knowledge-graph/src/: auth.ts  embeddings.ts  index.ts
services/knowledge-graph/src/knowledge_graph_mcp/: __init__.py  __main__.py  config.py  db.py  embeddings.py  server.py
services/knowledge-graph/src/knowledge_graph_mcp/tools/: __init__.py  knowledge.py  learning.py  sessions.py
services/knowledge-graph/src/tools/: knowledge.ts  learning.ts
services/knowledge-graph/tests/: conftest.py  test_config.py  test_embeddings.py  test_knowledge.py  test_learning.py  test_sessions.py
services/reporting/: Dockerfile  alembic.ini  pyproject.toml
services/reporting-node/: Dockerfile  package.json
services/reporting/alembic/versions/: 001_initial.py
services/reporting/src/reporting_mcp/: __init__.py  server.py
services/reporting/src/reporting_mcp/tools/: reports.py
services/reporting/tests/: conftest.py  test_config.py  test_query.py  test_reports.py
(+67 files in other folders)
